--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">Sales Pacer</string>
+     <string name="tutorial_name">Tutorial</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
@@ -160,11 +161,46 @@
     <color name="Teal">#008080</color>
     <color name="Green">#008000</color>
     <color name="DarkGreen">#006400</color>
-    <color name="Blue">#0000FF</color>
+    <color name="Blue">#085FC2</color>
     <color name="MediumBlue">#0000CD</color>
     <color name="DarkBlue">#00008B</color>
     <color name="Navy">#000080</color>
 
     <string name="title_activity_take_note">Take a Note</string>
+    <string name="title_activity_popup">PopupActivity</string>
+ <string name="showcase_autodail_title">How the Sales Pacer works</string>
+  <string name="showcase_autodail_message">Click the call button to  dail the contacts listed currently displayed on the screen.</string>
+  <string name="showcase_dailprevious_title">How the Sales Pacer works</string>
+  <string name="showcase_dailprevious_message">Click the previous button to go to the pevious contact.</string>
+  <string name="showcase_dailnext_title">How the Sales Pacer works</string>
+  <string name="showcase_dailnext_message">Click the next button to go to the next contact.</string>
+  <string name="showcase_listview_title">How the Sales Pacer works</string>
+  <string name="showcase_listview_message">The contact to dail will always be displayed here.</string>
+   <string name="showcase_history_title">How the Sales Pacer works</string>
+  <string name="showcase_history_message">The history of the calls will always be displayed here.</string>
+   <string name="showcase_drawer_title">Quick Tour of the Sales Pacer</string>
+  <string name="showcase_drawer_message">access the menu from here</string>
+   <string name="showcase_refresh_title">Quick Tour of the Sales Pacer</string>
+  <string name="showcase_refresh_message">to refresh the contacts always use this button</string>
+   <string name="showcase_login_title">Quick Tour of the Sales Pacer</string>
+  <string name="showcase_login_message">to logout always use this button</string>
+   <string name="showcase_account_title">Quick Tour of the Sales Pacer</string>
+  <string name="showcase_account_message">your account info will always be displayed here </string>
+  <string name="checkinternetconnection">Check your internet connection </string>
+   <string name="servererror">Server error</string>
+    <string name="nointernetconnection">no internet connection </string>
+    
+    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
+<string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
+<string name="crash_notif_title">SalesPacer has crashed...</string>
+<string name="crash_notif_text">Please click here to help fix the issue.</string>
 
+<string name="crash_dialog_title">SalesPacer has crashed</string>
+<string name="crash_dialog_text">An unexpected error occurred forcing the
+    application to stop. Please help us fix this by sending us error data,
+    all you have to do is click OK.</string>
+     <string name="title_changelog">Sales Pacer Change log</string>
+    <string name="changelog_close">Close</string>
+<string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
+<string name="crash_dialog_ok_toast">Thank you !</string>
 </resources>
